--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
               <!-- listas y link de las pagina -->
               <ul class="d-flex p-2 flex-row  text-decoration-none  ">
                 <li class="list-unstyled p-2" >
-                  <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                  <a href="./pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
                 </li>
                 <li class="list-unstyled p-2" >
-                  <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
+                  <a href="./pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
                 </li>
                 <li class="list-unstyled p-2">
-                  <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">RugbyFemenino</a>
+                  <a href="./pages/rugbyfemenino.html" class="text-decoration-none link-dark">RugbyFemenino</a>
                 </li>
                 <li class="list-unstyled p-2" >
-                  <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
+                  <a href="./pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
                 </li>
               </ul>
           
