cambiamos las rutas del html

--- a/pages/rugbyfemenino.html
+++ b/pages/rugbyfemenino.html
@@ -20,13 +20,13 @@
                 <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
             </li>
             <li class="list-unstyled p-2">
-                <a href="./rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
+                <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
             </li>
             <li class="list-unstyled p-2">
-                <a href="./contacto.html" class="text-decoration-none link-dark">Contacto</a>
+                <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
             </li>
             <li class="list-unstyled p-2">
-                <a href="./noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
             </li>
         </ul>
 
