--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,13 +24,13 @@
                     <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
                 </li>
                 <li class="list-unstyled p-2">
-                    <a href="./rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
+                    <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
                 </li>
                 <li class="list-unstyled p-2">
-                    <a href="./rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
+                    <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                 </li>
                 <li class="list-unstyled p-2">
-                    <a href="./noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                    <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
                 </li>
             </ul>
            
