--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -23,13 +23,13 @@
                         <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
                     </li>
                     <li class="list-unstyled p-2" >
-                        <a href="./rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
+                        <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
                     </li>
                     <li class="list-unstyled p-2" >
-                        <a href="./contacto.html" class="text-decoration-none link-dark">Contacto</a>
+                        <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
                     </li>
                     <li class="list-unstyled p-2" >
-                        <a href="./rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
+                        <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                     </li>
                 </ul>
         </nav>
