agregamos texto y estilos al css con media queries

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
           <nav class="col-12  bg-white ">
               <!-- listas y link de las pagina -->
               <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                <li class="list-unstyled p-2" >
+                <li class="list-unstyled p-2 li" >
                   <a href="./pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
                 </li>
-                <li class="list-unstyled p-2" >
+                <li class="list-unstyled p-2 li" >
                   <a href="./pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
                 </li>
-                <li class="list-unstyled p-2">
+                <li class="list-unstyled p-2 li">
                   <a href="./pages/rugbyfemenino.html" class="text-decoration-none link-dark">RugbyFemenino</a>
                 </li>
-                <li class="list-unstyled p-2" >
+                <li class="list-unstyled p-2 li" >
                   <a href="./pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
                 </li>
               </ul>
