--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,16 +20,16 @@
              <!-- listas y link de las pagina -->
 
             <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                <li class="list-unstyled p-2">
+                <li class="list-unstyled p-2 li">
                     <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
                 </li>
-                <li class="list-unstyled p-2">
+                <li class="list-unstyled p-2 li">
                     <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
                 </li>
-                <li class="list-unstyled p-2">
+                <li class="list-unstyled p-2 li">
                     <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                 </li>
-                <li class="list-unstyled p-2">
+                <li class="list-unstyled p-2 li">
                     <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
                 </li>
             </ul>
@@ -41,18 +41,18 @@
             <!-- quienes somos y cual es nuestro objetivo con la pagina -->
         <section class="container">
                 <div class="row">
-                    <h2 >Quienes somos? </h2>
+                    <h2 class="contacto" >Quienes somos? </h2>
                 <div class="  d-lg-flex d-xl-flex ">
             <article >
                 <p class=" col-sm-12 col-md-12 col-lg-8 col-xl-8">
-                soy solo un aficionado al rugby
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat veritatis atque est incidunt cupiditate. Eligendi voluptatum magnam reiciendis voluptatem tempora, cum modi fuga, eos explicabo laborum, cupiditate repellat quisquam aliquam?
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, ullam? Itaque, earum sequi hic ullam veritatis soluta quis minus corrupti quisquam ex incidunt voluptatibus maxime accusamus aliquam neque reprehenderit harum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab ducimus rerum similique odio debitis quod id, saepe dolorem quisquam ipsam ut optio modi recusandae tenetur! Minus incidunt exercitationem nulla.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repellendus corporis illo sint perspiciatis. Ipsa alias, suscipit consectetur perferendis vero illo, ex sint est incidunt, aut dolore ea harum fugiat?
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, vel rem. Quisquam quo magnam, quaerat, voluptatem, iste facilis provident tenetur qui voluptates vitae beatae assumenda voluptate tempora nulla doloremque sequi!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam enim tempore maxime ipsum numquam voluptate deserunt aliquid, nulla autem veritatis laborum? Placeat enim similique repellendus corporis aperiam saepe hic asperiores.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est accusantium quis, debitis consequuntur nobis adipisci nesciunt delectus dignissimos quam vero cumque maxime quae eaque reiciendis voluptate beatae, eius amet ea?
+                soy solo un aficionado al rugby el cual jugo al rugby en su niñez y por distintos motivos tuvo que dejar de jugar, aunque nunca dejando
+                su pasión al rugby ahora ya como un espectador y fanatico mas.
+                El objetivo de esta pagina no es mas que cualquier persona conozca los principios y que es el rugby en general con sus distintas modalidades,
+                tambien buscar subir noticias de la actualidad.
+                Quizas tambien subir posts hablando del rugby fuera de lo que es el deporte y mas como forma de vida y pasión vista de distintas perspectivas
+                de los distintos paises, ya sea Argentina o paises como Nueva Zelanda y Australia donde el rugby es un fenomeno popular.
+
+                
                 </p>
             </article>
             <article class="  col-sm-12 col-md-12 col-lg-4 col-xl-4">
