--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -19,16 +19,16 @@
         <nav class="col-12  bg-white ">
              <!-- listas y link de las pagina -->
                 <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                    <li class="list-unstyled p-2" >
+                    <li class="list-unstyled p-2 li" >
                         <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
                     </li>
-                    <li class="list-unstyled p-2" >
+                    <li class="list-unstyled p-2 li" >
                         <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
                     </li>
-                    <li class="list-unstyled p-2" >
+                    <li class="list-unstyled p-2 li" >
                         <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
                     </li>
-                    <li class="list-unstyled p-2" >
+                    <li class="list-unstyled p-2 li" >
                         <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                     </li>
                 </ul>
@@ -38,8 +38,7 @@
         <section class="container">
             <h2>Noticias</h2>
             <article>
-                <p>PROXIMAMENTE Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia totam voluptas fuga, quibusdam facere incidunt suscipit reiciendis debitis molestias ducimus eius error nihil aspernatur corporis atque porro excepturi ratione inventore.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates quidem eum sit repudiandae, sunt inventore iusto repellat dignissimos. Totam optio eligendi enim labore quasi ipsum alias suscipit eaque voluptate odio!
+                <p>PROXIMAMENTE 
 
                 </p>
             </article>
