--- a/pages/rugby7.html
+++ b/pages/rugby7.html
@@ -18,16 +18,16 @@
             <nav class="col-12  bg-white ">
              <!-- listas y link de las pagina -->
                 <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                    <li class="list-unstyled p-2">
+                    <li class="list-unstyled p-2 li">
                         <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
                     </li>
-                    <li class="list-unstyled p-2">
+                    <li class="list-unstyled p-2 li">
                         <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
                     </li>
-                    <li class="list-unstyled p-2">
+                    <li class="list-unstyled p-2 li">
                         <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                      </li>
-                    <li class="list-unstyled p-2">
+                    <li class="list-unstyled p-2 li">
                         <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
                     </li>
                 </ul>
@@ -62,12 +62,14 @@
               </div>
 
 
-        <p class=" col-sm-12 col-md-12 col-lg-12 col-xl-5 fs-5">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolorum iure saepe! Numquam, labore molestiae libero illum illo repellat laborum incidunt officia porro atque sequi excepturi iste perferendis optio explicabo?
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium ex asperiores aspernatur pariatur optio fuga unde dignissimos necessitatibus doloremque ipsum, assumenda veritatis cupiditate magnam iusto laboriosam tenetur vitae. Deserunt, itaque.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam eos similique nam facere consequuntur quo repudiandae minima, ad tempore perferendis numquam quod aut asperiores maiores totam, expedita at unde labore?
+        <p class=" col-sm-12 col-md-12 col-lg-12 col-xl-5 parrafo-rugby7">
+            El rugby 7, es una variante del rugby en el que juegan siete jugadores por equipo, en lugar de 15 como en el rugby Unión. Esta versión del rugby es muy popular con competiciones notables como en los Juegos Olímpicos, Copa del Mundo de Rugby 7 y la Serie Mundial de Rugby 7.
+            El organismo rector a nivel mundial del rugby 7 es la World Rugby (WR). Curiosamente se juega con las mismas reglas del rugby 15, con variaciones derivadas de la menor cantidad de jugadores y la brevedad del tiempo de juego, en un campo con las mismas dimensiones.
+            Mientras que un partido de rugby de quince jugadores dura 80 minutos, un partido de rugby 7 dura 14 minutos de tiempo real de juego, en dos mitades con un intervalo entre ellas de no más de dos minutos. Esto permite que se puedan realizar los torneos de rugby en un solo día o en un fin de semana. Los puntajes por partido también varía, no existiendo puntos bonus.
+            Sin embargo, los resultados son similares a los de la modalidad de quince jugadores; dado que la menor cantidad de jugadores en el campo causa que las marcas se realizan con más regularidad en rugby 7, ya que los defensas están más separados que en Rugby union. También existen los scrums, compuestos por solo tres jugadores de cada equipo.
         
         </p>
+
     
         </article>
     </div>
