damos toques finales a la estructura de html y agregamos sass

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <!-- listas y link de las pagina -->
               <ul class="d-flex p-2 flex-row  text-decoration-none  ">
                 <li class="list-unstyled p-2 li" >
-                  <a href="./pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                  <a href="./pages/reglas.html" class="text-decoration-none link-dark">Reglas</a>
                 </li>
                 <li class="list-unstyled p-2 li" >
                   <a href="./pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
@@ -45,7 +45,7 @@
 
                       <article class="  d-lg-flex d-xl-flex ">
 
-                              <p class=" col-sm-12 col-md-12 col-lg-5 col-xl-5">El rugby es un deporte de evasión y contacto. En su modalidad mas extendida en el mundo
+                              <p class=" col-sm-12 col-md-12 col-lg-5 col-xl-5 parrafo-index">El rugby es un deporte de evasión y contacto. En su modalidad mas extendida en el mundo
                                 se juega 15 contra 15 jugadores y su objetivo es poner el balón en la zona de puntuación(o detras de la H como se conoce coloquialmente
                                 ) del contrario. Al apoyar el balón en la zona de anotación se le otorgaran 5 puntos, lo que se conoce como  try, consecuentemente el equipo que marco try tendra la posibilidad
                                 intentar lograr dos puntos más pateando la pelota entre los postes y sobre el travesaño desde un lugar en línea con el lugar donde fue marcado el try.
@@ -79,7 +79,7 @@
                         <!-- distintas modalidades del rugby -->
                 <section class="container">
                               <p>
-                                El rugby tiene distintas reglas las cuales veremos en otro apartado,<a href="#">(reglas)</a>por el momento me gustaria hablar sobre sus distintas modalidades mas populares
+                                El rugby tiene distintas reglas las cuales veremos en otro apartado, <a href="./pages/reglas.html" class="text-decoration-none">reglas</a> por el momento me gustaria hablar sobre sus distintas modalidades mas populares
                                  en el mundo
                                 </p>
                               <h3 class="text-center">Rugby Unión</h3>
