--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,7 +30,7 @@
                     <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                 </li>
                 <li class="list-unstyled p-2 li">
-                    <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                    <a href="../pages/reglas.html" class="text-decoration-none link-dark">Reglas</a>
                 </li>
             </ul>
            
@@ -44,7 +44,7 @@
                     <h2 class="contacto" >Quienes somos? </h2>
                 <div class="  d-lg-flex d-xl-flex ">
             <article >
-                <p class=" col-sm-12 col-md-12 col-lg-8 col-xl-8">
+                <p class=" col-sm-12 col-md-12 col-lg-8 col-xl-8 parrafo-contacto">
                 soy solo un aficionado al rugby el cual jugo al rugby en su niñez y por distintos motivos tuvo que dejar de jugar, aunque nunca dejando
                 su pasión al rugby ahora ya como un espectador y fanatico mas.
                 El objetivo de esta pagina no es mas que cualquier persona conozca los principios y que es el rugby en general con sus distintas modalidades,
