--- a/pages/rugby7.html
+++ b/pages/rugby7.html
@@ -28,7 +28,7 @@
                         <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
                      </li>
                     <li class="list-unstyled p-2 li">
-                        <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                        <a href="../pages/reglas.html" class="text-decoration-none link-dark">Reglas</a>
                     </li>
                 </ul>
             </nav>
@@ -65,12 +65,78 @@
         <p class=" col-sm-12 col-md-12 col-lg-12 col-xl-5 parrafo-rugby7">
             El rugby 7, es una variante del rugby en el que juegan siete jugadores por equipo, en lugar de 15 como en el rugby Unión. Esta versión del rugby es muy popular con competiciones notables como en los Juegos Olímpicos, Copa del Mundo de Rugby 7 y la Serie Mundial de Rugby 7.
             El organismo rector a nivel mundial del rugby 7 es la World Rugby (WR). Curiosamente se juega con las mismas reglas del rugby 15, con variaciones derivadas de la menor cantidad de jugadores y la brevedad del tiempo de juego, en un campo con las mismas dimensiones.
-            Mientras que un partido de rugby de quince jugadores dura 80 minutos, un partido de rugby 7 dura 14 minutos de tiempo real de juego, en dos mitades con un intervalo entre ellas de no más de dos minutos. Esto permite que se puedan realizar los torneos de rugby en un solo día o en un fin de semana. Los puntajes por partido también varía, no existiendo puntos bonus.
-            Sin embargo, los resultados son similares a los de la modalidad de quince jugadores; dado que la menor cantidad de jugadores en el campo causa que las marcas se realizan con más regularidad en rugby 7, ya que los defensas están más separados que en Rugby union. También existen los scrums, compuestos por solo tres jugadores de cada equipo.
+            Mientras que un partido de rugby de quince jugadores dura 80 minutos, un partido de rugby 7 dura 14 minutos de tiempo real de juego, en dos mitades con un intervalo entre ellas de no más de dos minutos. Esto permite que se puedan realizar los torneos de rugby en un solo día o en un fin de semana. 
+            Sin embargo, los resultados son similares a los de la modalidad de quince jugadores; dado que la menor cantidad de jugadores en el campo causa que las marcas se realizan con más regularidad en rugby 7, ya que los defensas están más separados que en Rugby union.
         
         </p>
 
     
+        </article>
+                        <!-- breve historia del rugby seven -->
+        <article>
+            <h2>
+                Un poco de historia sobre el rugby 7
+            </h2>
+                <p>
+                    El rugby 7 fue creado por Ned Haig, un carnicero Escocés como un evento para recaudar fondos para su club local en 1883.
+                    El primer torneo oficial de selecciones nacionales de rugby 7 fue el Torneo Internacional de Seven-a-Side de 1973, disputado en Murrayfield (Escocia), como parte de las celebraciones del centenario del rugby escocés. Contó con ocho equipos masculinos: las cinco naciones europeas (Inglaterra, Irlanda, Escocia, Gales y Francia), y tres equipos del hemisferio sur (Nueva Zelanda, Australia y  Sudáfrica)
+                    Debido al éxito del formato, en 1976 comenzó a disputarse el Seven de Hong Kong. Originalmente, el torneo combinaba clubes y seleccionados especiales de países anglosajones con selecciones nacionales de países de Asia y Oceanía. Con el tiempo, fue aumentando la cantidad de selecciones nacionales.
+                    En 1993, se creó la Copa del Mundo de Rugby 7 y en 1999 se conformó la Serie Mundial de Rugby 7, un certamen que consiste en siete a diez torneos de selecciones nacionales. Entre ellos se encuentran el Seven de Hong Kong, el Seven de Australia, el Seven de Nueva Zelanda, el Seven de Sudáfrica y el Seven de Londres.
+
+
+                </p>
+        </article>
+                            <!-- diferencia de reglas entre el rugby 7 y el rugby clasico -->
+        <article>
+                <h2>
+                    Variaciones de las reglas de juego
+                </h2>
+                <p>
+                    Lo más importante en el seven es la velocidad, la técnica y la buena forma física. Un equipo está compuesto mayormente por 3/4, a causa de su mayor velocidad y agilidad en comparación con las primeras y segundas líneas de los forwards; las terceras líneas (alas/flankers y 8) suelen forman parte también de los equipos de seven. En Argentina y algunos otros países suelen jugarse torneos de a siete jugadores con equipos formados especialmente para el torneo, que son exclusivamente forwards (delanteros) o bien exclusivamente pilares (pillier, prop). Estos mini torneos se juegan en ese país una vez finalizada la temporada regular y como forma de diversión y de mejorar destrezas en el manejo del balón por parte de los delanteros.
+                    Además, puede ser que los jugadores necesiten ser más creativos en realizar jugadas, con solo 14-20 minutos por partido.
+                    Hay muchas variantes en las reglas que se aplican al rugby a siete, principalmente para agilizar el juego y para justificar el número reducido de jugadores
+                </p>
+                <ul>
+                    <li>
+                        7 jugadores por equipo (en lugar de 15).
+                    </li>
+                    <li>
+                        5 reservas, con solo 3 reemplazos (en lugar de 8 y 8).
+                    </li>
+                    <li>
+                        Intermedio de 2 minutos (en lugar de 10 minutos).
+                    </li>
+                    <li>
+                        Si hay empate, continúan con prórroga por muerte súbita, en períodos de 5 minutos sin intervalo.
+                    </li>
+                    <li>
+                        Las conversiones o transformaciones deben ser efectuadas mediante un puntapié de drop (en lugar de un place kick, puntapié con la pelota estacionaria).
+                    </li>
+                    <li>
+                        Se debe realizar la transformación en los 30 segundos siguientes de realizar la marca (en lugar de 90).
+                    </li>
+                    <li>
+                        Scrums de 3 personas (en lugar de 8).
+                    </li>
+                    <li>
+                        El equipo que marca es el que saca, reanudando el juego (en lugar del que no ha marcado).
+                    </li>
+                    <li>
+                        Las penalizaciones derivadas del saque (como no alcanzar los 10m, sacar directamente al lateral...) se castigan con un Golpe Franco (Free kick) (en lugar de la opción usual para el equipo no infractor).
+                    </li>
+                    <li>
+                        Las tarjetas amarillas marcan una suspensión de 2 minutos (en lugar de 10 minutos).
+                    </li>
+                    <li>
+                        Las suspensiones son más graves en esta modalidad. El equipo juega con una persona menos durante 1/7 parte del partido en lugar de 1/8 parte. Además, perder una persona de 7 abre muchos más espacios que perder una de 15.
+                    </li>
+                    <li>
+                        Los árbitros deciden en ventaja rápidamente (cuando el equipo no infractor juega, normalmente finaliza la ventaja, distinto del rugby clásico).
+                    </li>
+                    <li>
+                        El puntaje obtenido por partido en las etapas de grupo, también varía: 3 puntos para el ganador, 2 puntos en caso de empate y un punto para el perdedor. No hay bonus.
+                    </li>
+                </ul>
         </article>
     </div>
         </section>
