--- a/pages/rugbyfemenino.html
+++ b/pages/rugbyfemenino.html
@@ -26,7 +26,7 @@
                 <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
             </li>
             <li class="list-unstyled p-2 li">
-                <a href="../pages/noticias.html" class="text-decoration-none link-dark">Noticias</a>
+                <a href="../pages/reglas.html" class="text-decoration-none link-dark">Reglas</a>
             </li>
         </ul>
 
@@ -71,6 +71,35 @@
                           </div>
 
 
+                </article>
+                <article>
+                  <h2 class="d-flex justify-content-center">
+                    Historia
+                  </h2>
+                  <p>
+                    Recién en 1982 fue cuando en Utrecht (ciudad de Países Bajos) se enfrentaron Países Bajos vs. Francia, siendo el primer test match de la historia. El partido tuvo lugar por una idea que se le ocurrió a la Unión Neerlandesa de Rugby que celebraba su 50 aniversario y Francia vencieron 4-0 (un try) a los Países Bajos.
+                    En 1984 fue el segundo test y se jugó en Malmö (Suecia); Países Bajos perdió 34-0 contra Suecia y el tercero ocurrió en 1985 cuando se sumó Italia, que empató 0-0 con Francia en Riccione. En 1987 fue el primero que se jugó fuera de Europa, actualmente se han jugado más de 1.000 y cada selección ha superado los 50 internacionales.
+                  </p>
+                    <h3>
+                      Expansión
+                    </h3>
+                    <p>
+                      En 1988 se realizó el primer torneo oficial y participaron Francia, Gran Bretaña, Italia y los Países Bajos; la Women's European Cup 1988 ( Primera y unica edición del torneo ). En 1990 tuvo lugar el primer torneo realmente mundial, que vio nacer a las selecciones de Nueva Zelanda y la Unión Soviética, más las participaciones de los Estados Unidos y Países Bajos; el RugbyFest 1990.
+                    </p>
+                    <h4>
+                      World Rugby
+                    </h4>
+                    <p>
+                      En 1996 y debido a la profesionalización de los hombres un año antes, Vernon Pugh ( Primer Presidente de la WR entre 1995 y 2002 ) decidió administrar el rugby femenino. Fue el impulso final y desde entonces no ha dejado de crecer: en 2001 las jugadoras habían aumentado un 100%.
+                      El 21 de agosto de 2019, WR anunció que las designaciones de género se eliminarían del título de la Copa del Mundo femenina. Todos los torneos desde Nueva Zelanda 2021 en adelante, ya sean para hombres o mujeres, se llamarán oficialmente solo «Copa Mundial de Rugby» más la designación del año.
+                    </p>
+                    <h4>
+                        Popularidad
+                    </h4>
+                    <p>
+                      El fútbol femenino es el deporte de equipo más popular entre las mujeres, pero también el de más disparidad de género; debido sobre todo a las gigantes diferencias de salarios profesionales. Por ello se cree que el rugby es, potencialmente, el deporte que ocupará ese lugar.
+                      En el mundial de Irlanda 2017 hubo más de 45.000 espectadores en los estadios y 2.6 millones de televidentes observando la final en el Reino Unido; la mitad de los que tuvo la de Japón 2019. WR estima superar esto en Nueva Zelanda 2021 y estima que para 2026 el 40% del número total de jugadores serán mujeres.
+                    </p>
                 </article>
             </div>
             </section>
