seguimos agregando sass a nuestro html

--- a/pages/reglas.html
+++ b/pages/reglas.html
@@ -11,26 +11,26 @@
 </head>
 <body>
     
-    <header class="container bg-dark">
+    <header class="container">
         <!-- encabezado de la pagina -->
             <div class="row">
-                <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-white text-center">
+                <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12  text-center">
                     WorldRugby
                 </h1>
-        <nav class="col-12  bg-white ">
+        <nav class="col-12">
                         <!-- listas y link de las pagina -->
-                <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                    <li class="list-unstyled p-2 li">
-                        <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
+                <ul class="d-flex  flex-row  ">
+                    <li >
+                        <a href="../index.html" >inicio</a>
                     </li>
-                    <li class="list-unstyled p-2 li">
-                        <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
+                    <li >
+                        <a href="../pages/contacto.html" >Contacto</a>
                     </li>
-                    <li class="list-unstyled p-2 li">
-                        <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
+                    <li >
+                        <a href="../pages/rugbyfemenino.html" >Rugby Femenino</a>
                     </li>
-                    <li class="list-unstyled p-2 li">
-                        <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
+                    <li >
+                        <a href="../pages/rugby7.html" >Rugby7</a>
                     </li>
                 </ul>
         </nav>
@@ -143,7 +143,7 @@
 
 
         <footer  class="container">
-            <div class="bg-dark">
+            <div >
                 hola
             </div>
       </footer>
