--- a/pages/rugby7.html
+++ b/pages/rugby7.html
@@ -9,26 +9,26 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header class="container bg-dark">
+    <header class="container ">
                         <!-- encabezado de la pagina -->
         <div class="row">
-                <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-white text-center">
+                <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center ">
                     WorldRugby
                 </h1>
-            <nav class="col-12  bg-white ">
+            <nav class="col-12  ">
              <!-- listas y link de las pagina -->
-                <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                    <li class="list-unstyled p-2 li">
-                        <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
+                <ul class="d-flex  flex-row   ">
+                    <li >
+                        <a href="../index.html" >inicio</a>
                     </li>
-                    <li class="list-unstyled p-2 li">
-                        <a href="../pages/contacto.html" class="text-decoration-none link-dark">Contacto</a>
+                    <li >
+                        <a href="../pages/contacto.html" >Contacto</a>
                     </li>
-                    <li class="list-unstyled p-2 li">
-                        <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
+                    <li >
+                        <a href="../pages/rugbyfemenino.html" >Rugby Femenino</a>
                      </li>
-                    <li class="list-unstyled p-2 li">
-                        <a href="../pages/reglas.html" class="text-decoration-none link-dark">Reglas</a>
+                    <li >
+                        <a href="../pages/reglas.html" >Reglas</a>
                     </li>
                 </ul>
             </nav>
@@ -37,8 +37,8 @@
             <!-- primera sección donde buscamos hablar de  una nueva y popular modalidad del rugby -->
         <section class="container">
             <div class="row">
-            <h2 >Rugby7</h2 >
-        <article class="   d-xl-flex ">
+            <h2 class="titulo-rugby7">Rugby7</h2 >
+        <article class="  d-xl-flex ">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active col-sm-12 col-md-12 col-lg-12 col-xl-7">
@@ -74,7 +74,7 @@
         </article>
                         <!-- breve historia del rugby seven -->
         <article>
-            <h2>
+            <h2 class="h2-rugby7">
                 Un poco de historia sobre el rugby 7
             </h2>
                 <p>
@@ -88,7 +88,7 @@
         </article>
                             <!-- diferencia de reglas entre el rugby 7 y el rugby clasico -->
         <article>
-                <h2>
+                <h2 class="h2-rugby7">
                     Variaciones de las reglas de juego
                 </h2>
                 <p>
