--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,27 +10,27 @@
 
 </head>
 <body>
-    <header class="container bg-dark">
+    <header class="container" >
                         <!-- encabezado de la pagina -->
             <div class="row ">
-                <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-white text-center" >
+                <h1 class="col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center " >
                     WorldRugby
                 </h1>
-        <nav class="col-12  bg-white ">
+        <nav class="col-12">
              <!-- listas y link de las pagina -->
 
-            <ul class="d-flex p-2 flex-row  text-decoration-none  ">
-                <li class="list-unstyled p-2 li">
-                    <a href="../index.html" class="text-decoration-none link-dark">inicio</a>
+            <ul class="d-flex  flex-row ">
+                <li >
+                    <a href="../index.html" >inicio</a>
                 </li>
-                <li class="list-unstyled p-2 li">
-                    <a href="../pages/rugby7.html" class="text-decoration-none link-dark">Rugby7</a>
+                <li >
+                    <a href="../pages/rugby7.html" >Rugby7</a>
                 </li>
-                <li class="list-unstyled p-2 li">
-                    <a href="../pages/rugbyfemenino.html" class="text-decoration-none link-dark">Rugby Femenino</a>
+                <li >
+                    <a href="../pages/rugbyfemenino.html" >Rugby Femenino</a>
                 </li>
-                <li class="list-unstyled p-2 li">
-                    <a href="../pages/reglas.html" class="text-decoration-none link-dark">Reglas</a>
+                <li >
+                    <a href="../pages/reglas.html" >Reglas</a>
                 </li>
             </ul>
            
@@ -115,7 +115,7 @@
 
 
         <footer class="container" >
-            <div class="bg-dark">
+            <div >
                 hola
             </div>
         </footer>
