agregamos seo y optimizacion de imagenes

--- a/pages/reglas.html
+++ b/pages/reglas.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Descubri las reglas basicas y no tan basicas del rugby">
+   <meta name="keywords"  content="rugby, reglas del rugby, scrum, line-out, tackle">
+    <title>WorldRugby</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
 
@@ -119,7 +121,7 @@
                     Cuando el balón, o el jugador que lo lleva, salen del campo por la línea de touch, el juego se reinicia mediante un saque de banda llamado line out que debe arrojarse recto y superando la línea ubicada a cinco metros campo adentro del touch entre dos hileras de jugadores, una de cada equipo y separadas por una distancia de un metro. Los jugadores deben saltar para obtener la pelota, pudiendo ser impulsados y sostenidos por sus compañeros. El lanzamiento le corresponde al equipo que no la envió afuera, salvo que haya sido consecuencia de un penal, en cuyo caso debe lanzar el equipo que pateó. El equipo que lanza la pelota decide también cuántos jugadores va a haber en la hilera (de 2 a 14), mientras que el otro equipo puede tener menos pero no más. Todos los demás jugadores, excepto el lanzador, un opuesto al lanzador del equipo rival, y un receptor por cada equipo, deben alejarse diez metros hacia su campo de la línea perpendicular al touch por donde se arrojará la pelota.
                 </p>
                 <div class="d-flex justify-content-center">
-                    <img src="../images/line out.jpg" alt="line out o lateral" class="img-fluid">
+                    <img src="../images/line-out.webp" alt="line out o lateral" class="img-fluid">
                 </div>
             </div>
                 <p class="line">
@@ -134,7 +136,7 @@
                     Scrum en rugby es una formación fija cuya función es disputar la pelota y volver a ponerla en juego, luego de una falta menor.
                     El scrum se forma mediante el enfrentamiento de dos bloques de jugadores enlazados, los packs, correspondiente cada uno a cada equipo. Cuando se va a realizar un scrum cada uno de los equipos forma un bloque con sus ocho delanteros o forwards, siguiendo una estructura de tres líneas establecida en el reglamento. Una vez formados, ambos packs deben agacharse y ubicarse uno frente al otro, para tomarse y esperar la indicación del árbitro para empezar a empujar con el fin de avanzar sobre el otro y obtener la pelota
                 </p>
-                <img src="../images/Scrum-argentino.jpg" alt="scrum entre Argentina y Nueva Zelanda" class="img-fluid">
+                <img src="../images/Scrum-argentino.webp" alt="scrum entre Argentina y Nueva Zelanda" class="img-fluid">
             </div>
         </article>
         </div>
