--- a/pages/rugby7.html
+++ b/pages/rugby7.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="que es el rugby 7, la nueva y popular modalidad del rugby">
+   <meta name="keywords"  content="rugby, rugby7, reglas, historia rugby">
     <title>WorldRugby</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -42,13 +44,13 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                    <img src="../images/rugby7.webp" alt="jugador de rugby corriendo" class="img-fluid ">
+                    <img src="../images/hagowjxo5cwjkudx7agj.webp" alt="jugador de rugby corriendo" class="img-fluid ">
                   </div>
                   <div class="carousel-item col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                    <img src="../images/rugby7.jpg" class="img-fluid" alt=".jugador de rugby siendo tacleado">
+                    <img src="../images/rugby7-2.webp" class="img-fluid" alt=".jugador de rugby siendo tacleado">
                   </div>
                   <div class="carousel-item col-sm-12 col-md-12 col-lg-12 col-xl-7">
-                    <img src="../images/rugby7-2.jpg" class="img-fluid" alt="jugador de rugby siendo tacleado">
+                    <img src="../images/rugby7-3.webp" class="img-fluid" alt="jugador de rugby siendo tacleado">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -91,11 +93,11 @@
                 <h2 class="h2-rugby7">
                     Variaciones de las reglas de juego
                 </h2>
-                <p>
+                    <p>
                     Lo más importante en el seven es la velocidad, la técnica y la buena forma física. Un equipo está compuesto mayormente por 3/4, a causa de su mayor velocidad y agilidad en comparación con las primeras y segundas líneas de los forwards; las terceras líneas (alas/flankers y 8) suelen forman parte también de los equipos de seven. En Argentina y algunos otros países suelen jugarse torneos de a siete jugadores con equipos formados especialmente para el torneo, que son exclusivamente forwards (delanteros) o bien exclusivamente pilares (pillier, prop). Estos mini torneos se juegan en ese país una vez finalizada la temporada regular y como forma de diversión y de mejorar destrezas en el manejo del balón por parte de los delanteros.
                     Además, puede ser que los jugadores necesiten ser más creativos en realizar jugadas, con solo 14-20 minutos por partido.
                     Hay muchas variantes en las reglas que se aplican al rugby a siete, principalmente para agilizar el juego y para justificar el número reducido de jugadores
-                </p>
+                    </p>
                 <ul>
                     <li>
                         7 jugadores por equipo (en lugar de 15).
@@ -137,14 +139,14 @@
                         El puntaje obtenido por partido en las etapas de grupo, también varía: 3 puntos para el ganador, 2 puntos en caso de empate y un punto para el perdedor. No hay bonus.
                     </li>
                 </ul>
-        </article>
-    </div>
-        </section>
-        <footer class="container">
-            <div class="bg-dark">
-                hola
-            </div>
-        </footer>
+            </article>
+        </div>
+            </section>
+                <footer class="container">
+                    <div class="bg-dark">
+                        hola
+                    </div>
+                </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
