--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conoce que es el rugby y su mas popular modalidad">
+    <meta name="keywords"  content="que es el rugby, rugby, rugby union">
     <title>WorldRugby</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -53,13 +55,13 @@
                               <div id="carouselExample" class="carousel slide">
                                 <div class="carousel-inner">
                                   <div class="carousel-item active col-sm-12 col-md-12 col-lg-7 col-xl-7">
-                                    <img src="./images/argentina-juan-imhoff-south-africa-rugby-championship.jpg" alt="jugador de rugby esquivando" class="img-fluid ">
+                                    <img src="./images/argentina-juan-imhoff-south-africa-rugby-championship.webp" alt="jugador de rugby esquivando" class="img-fluid ">
                                   </div>
                                   <div class="carousel-item col-sm-12 col-md-12 col-lg-7 col-xl-7">
-                                    <img src="./images/imagen2.jpg" class="img-fluid" alt="jugador de rugby corriendo">
+                                    <img src="./images/imagen.webp" class="img-fluid" alt="jugador de rugby corriendo">
                                   </div>
                                   <div class="carousel-item col-sm-12 col-md-12 col-lg-7 col-xl-7">
-                                    <img src="./images/3000.jpg" class="img-fluid" alt="jugador de rugby">
+                                    <img src="./images/3000.webp" class="img-fluid" alt="jugador de rugby">
                                   </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -95,7 +97,7 @@
                                       Primera línea: los jugadores que intentan llevar la pelota a su lado y que están en el
                                       choque; su función en los scrums es mantener el scrum estable.</p>
 
-                              <img src="./images/lasposiciones.jpg" alt="posiciones de los jugadores" class="img-fluid">
+                              <img src="./images/lasposiciones.webp" alt="posiciones de los jugadores" class="img-fluid">
                             </div>
                               <span class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
 
